<resources>
    <string name="app_name">ExamSystem</string>

    <string name="img_name">TARUC Exam System</string>
    <string name="id_text">Examinator ID Verification:</string>
    <string name="ip_text">Chief Connection:</string>
    <string name="cl_text">Bundle Collection:</string>
    <string name="login_text">LOGIN</string>

    <string name="button_opt1">OBTAIN STUDENT INFO</string>
    <string name="button_opt2">ASSIGN EXAM INFO</string>
    <string name="button_opt3">CHECKING AND SUBMISSION</string>

    <string name="button_back">BACK</string>
    <string name="icon">message icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_pw">Enter Your Password:</string>
    <string name="error_icon">Error Icon</string>
    <string name="unchecked">UNASSIGNED\nUNDO?</string>
    <string name="checked">ASSIGNED\nUNASSIGN?</string>

    <string name="total">TOTAL:</string>
    <string name="exempted">EXEMPTED:</string>
    <string name="barred">BARRED:</string>
    <string name="absent">ABSENT:</string>
    <string name="room">ROOM:</string>
    <string name="present">PRESENT:</string>
    <string name="in_charge">IN_CHARGE:</string>
    <string name="setting">Setting</string>
    <string name="title_activity_submission">SubmissionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="testing">Testing</string>
    <string name="collector">Collector</string>
    <string name="late">late</string>

</resources>
